icmake (9.02.02)

  * Fixed an annoying typo in [/usr/lib/icmake/]icmbuild. Do not use 9.02.01

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 01 Nov 2016 13:40:42 +0100

icmake (9.02.01)

  * Fixed a flaw in [/usr/lib/icmake/]icmbuild: when DEFCOM "library" was
    defined in icmconf, and precompiled headers were requested, then MAIN had
    to be defined as well. This is not required anymore.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 01 Nov 2016 09:54:11 +0100

icmake (9.02.00)

  * icmbuild now is a small program, providing help or starting the icmbuild
    script in LIBDIR (cf. INSTALL)

  * Man-pages were updated
  
  * Cosmetic changes to icmake --help's output

  * The name of the optional configuration file YEAR was changed to YEARS
    (as it defines YEARS, not YEAR)

  * `icmconf' was added to /etc/icmake/icmstart.rc

  * As mentioned in icmake's man-page the program `icmun' is mainly used in 
    some specific situations. In icmake's daily practice it isn't
    used. Therefore it was moved from the standard binary programs directory
    to icmake's LIB directory (commonly /usr/lib/icmake).

  * The file /etc/icmake/icmake.rc was nowhere used and was removed.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 25 Sep 2016 12:36:07 +0200

icmake (9.01.00)

  * Man-pages weren't properly updated at 9.00.00. This was fixed in this
    release. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 03 Sep 2016 15:10:43 +0200

icmake (9.00.00)

  * Added support program icm-dep computing dependencies for USE_ALL classes
    and precompiled headers, called from /usr/bin/icmbuild, or directly using
    icmake's option --icm-dep (-d)

  * Icmake supports several long options in addition to the standard short
    options. See icmake(1) for details.

  * Changed references to IS_* into O_* in icmake(1)'s man-page. The IS_
    entries were already unavailable, but the man-page still referred to
    them. Now fixed.
