@@ -35,6 +35,9 @@ lurl(https://github.com/fbb-git/_project_/releases) or direct from its
 release page):
 
         itemization(
+        it() url(9.02.03)
+              (https://github.com/fbb-git/_project_/releases/tag/9.02.03)
+Nov 02, 2017;
         it() url(9.02.02)
               (https://github.com/fbb-git/_project_/releases/tag/9.02.02)
 Nov 01, 2016;
@@ -46,10 +49,7 @@ Sep 29, 2016;
 Sep 03, 2016;
         it() url(9.00.00)
               (https://github.com/fbb-git/_project_/releases/tag/9.00.00)
-Jul 23, 2016;
-        it() url(8.01.00)
-              (https://github.com/fbb-git/_project_/releases/tag/8.01.00)
-Feb 13, 2016.
+Jul 23, 2016.
         )
     COMMENT(NOTE: LAST ITEM SHOULD END IN . )
 
