@@ -1,40 +1,7 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>icmake</title>
-<style type="text/css">
-    figure {text-align: center;}
-    img {vertical-align: center;}
-</style>
-<link rev="made" href="mailto:Frank B. Brokken: f.b.brokken@rug.nl">
-</head>
-<body text="#27408B" bgcolor="#FFFAF0">
-<hr/>
-<h1 id="title">icmake</h1>
-<h2 id="author">icmake.9.02.02.tar.gz</h2>
-<h2 id="date">1992-2016</h2>
-
-<!DOCTYPE html><html><head>
-<meta charset="UTF-8">
-<style type="text/css">
-    figure {text-align: center;}
-    img {vertical-align: center;}
-    figure {text-align: center;}
-    img {vertical-align: center;}
-</style>
-<link rev="made" href="mailto:Frank B. Brokken: f.b.brokken@rug.nl">
-</head>
-<body text="#27408B" bgcolor="#FFFAF0">
-<hr/>
-<h1 id="title"></h1>
-
-<!DOCTYPE html><html><head>
-<meta charset="UTF-8">
 <title>icmake(1)</title>
 <style type="text/css">
-    figure {text-align: center;}
-    img {vertical-align: center;}
-    figure {text-align: center;}
-    img {vertical-align: center;}
     figure {text-align: center;}
     img {vertical-align: center;}
 </style>
@@ -43,8 +10,8 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">icmake(1)</h1>
-<h2 id="author">icmake.9.02.02.tar.gz A program maintenance utility</h2>
-<h2 id="date">1992-2016</h2>
+<h2 id="author">A program maintenance utility<br/>(icmake.9.02.03.tar.gz)</h2>
+<h2 id="date">1992-2017</h2>
 
 
 <p>
@@ -1443,3 +1410,5 @@ for <strong >C++</strong> and <strong >C</strong> program maintenance.
 <h2 >AUTHOR</h2>
     Frank B. Brokken (<strong >f.b.brokken@rug.nl</strong>).
 <p>
+</body>
+</html>
