@@ -1,40 +1,7 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>icmconf</title>
-<style type="text/css">
-    figure {text-align: center;}
-    img {vertical-align: center;}
-</style>
-<link rev="made" href="mailto:Frank B. Brokken: f.b.brokken@rug.nl">
-</head>
-<body text="#27408B" bgcolor="#FFFAF0">
-<hr/>
-<h1 id="title">icmconf</h1>
-<h2 id="author">icmake.9.02.02.tar.gz</h2>
-<h2 id="date">1992-2016</h2>
-
-<!DOCTYPE html><html><head>
-<meta charset="UTF-8">
-<style type="text/css">
-    figure {text-align: center;}
-    img {vertical-align: center;}
-    figure {text-align: center;}
-    img {vertical-align: center;}
-</style>
-<link rev="made" href="mailto:Frank B. Brokken: f.b.brokken@rug.nl">
-</head>
-<body text="#27408B" bgcolor="#FFFAF0">
-<hr/>
-<h1 id="title"></h1>
-
-<!DOCTYPE html><html><head>
-<meta charset="UTF-8">
 <title>icmconf(7)</title>
 <style type="text/css">
-    figure {text-align: center;}
-    img {vertical-align: center;}
-    figure {text-align: center;}
-    img {vertical-align: center;}
     figure {text-align: center;}
     img {vertical-align: center;}
 </style>
@@ -43,8 +10,8 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">icmconf(7)</h1>
-<h2 id="author">icmake.9.02.02.tar.gz configuration file for <strong >icmbuild</strong>(1)</h2>
-<h2 id="date">1992-2016</h2>
+<h2 id="author">configuration file for <strong >icmbuild</strong>(1)<br/>(icmake.9.02.03.tar.gz)</h2>
+<h2 id="date">1992-2017</h2>
 
 
 <p>
@@ -401,3 +368,5 @@ working directory does not contain a file <em >icmconf</em>.
 <h2 >AUTHOR</h2>
     Frank B. Brokken (<strong >f.b.brokken@rug.nl</strong>).
 <p>
+</body>
+</html>
