@@ -1,40 +1,7 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>icmstart</title>
-<style type="text/css">
-    figure {text-align: center;}
-    img {vertical-align: center;}
-</style>
-<link rev="made" href="mailto:Frank B. Brokken: f.b.brokken@rug.nl">
-</head>
-<body text="#27408B" bgcolor="#FFFAF0">
-<hr/>
-<h1 id="title">icmstart</h1>
-<h2 id="author">icmake.9.02.02.tar.gz</h2>
-<h2 id="date">1992-2016</h2>
-
-<!DOCTYPE html><html><head>
-<meta charset="UTF-8">
-<style type="text/css">
-    figure {text-align: center;}
-    img {vertical-align: center;}
-    figure {text-align: center;}
-    img {vertical-align: center;}
-</style>
-<link rev="made" href="mailto:Frank B. Brokken: f.b.brokken@rug.nl">
-</head>
-<body text="#27408B" bgcolor="#FFFAF0">
-<hr/>
-<h1 id="title"></h1>
-
-<!DOCTYPE html><html><head>
-<meta charset="UTF-8">
 <title>icmstart(1)</title>
 <style type="text/css">
-    figure {text-align: center;}
-    img {vertical-align: center;}
-    figure {text-align: center;}
-    img {vertical-align: center;}
     figure {text-align: center;}
     img {vertical-align: center;}
 </style>
@@ -43,8 +10,8 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">icmstart(1)</h1>
-<h2 id="author">icmake.9.02.02.tar.gz starts icmbuild program maintenance</h2>
-<h2 id="date">1992-2016</h2>
+<h2 id="author">starts icmbuild program maintenance<br/>(icmake.9.02.03.tar.gz)</h2>
+<h2 id="date">1992-2017</h2>
 
 
 <p>
@@ -249,3 +216,5 @@ merely installs the top-level directory, <em >icmconf</em> and <em >VERSION</em>
 <h2 >AUTHOR</h2>
     Frank B. Brokken (<strong >f.b.brokken@rug.nl</strong>).
 <p>
+</body>
+</html>
