@@ -1,3 +1,11 @@
+icmake (9.02.03)
+
+  * stdarg.h is needed in rss.h: inclusion moved from rss.ih to rss.h
+
+  * updated the usr/share/icmake/icmconf file
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 02 Nov 2017 09:18:16 +0100
+
 icmake (9.02.02)
 
   * Fixed an annoying typo in [/usr/lib/icmake/]icmbuild. Do not use 9.02.01
